--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
   <div id="home" class="full-page-background">
     <div class="hero-text">
       <h1>Hi I'm Joe</h1>
-      <p>And I'm learning to be a full stack web developer</p>
-      <a href="#navbar"><button>Learn more about me</button></a>
+      <p>
+      <a href="#navbar"><button class="button1">Learn about me</button></a>
+      <a  href="#projects"><button class="button2">See my projects</button></a>
+      <a  href="#navbar"><button class="button3">Get in touch</button></a>
     </div>
   </div>
 
@@ -69,23 +71,111 @@
       <button class="submit" type="submit">Submit</button>
     </div>
     <div class="maintext">
-      <h2 id="nutshell">In a Nutshell</h2>
-      <p>In July '19 I quit my job to go travelling for 8 months. Now I'm back in the UK and for the last 5 months
-        I've
-        been retraining to move into full-stack web developent.</p>
+      <h2 id="nutshell">About Me</h2>
+      <p>Driven and capable software developer with an eye for detail. Passionate about tech, a strong communicator and team player.  8 years of leadership roles in E-Commerce have provided me with extensive commercial knowledge, the skills to manage multiple varied stakeholders and a keen understanding of front-end user experience. After intensive study, and hands-on experience creating custom websites, I am ready to utilise my unique skillset to help businesses achieve their goals. </p>
     </div>
     <div class="maintext">
-      <h2 id="background">My Background</h2>
-      <p>I've spent the last 14 years working in retail. It's been a pretty varied career, starting off as an analyst
-        for Marks and Spencer, moving into finance for Arcadia and for the last 6 years I've managed the Wolverine
-        European E-Commerce business. This has provided me with some useful transferable skills including:</p>
-      <ul>
-        <li>Project Management</li>
-        <li>Commercial Accumen</li>
-        <li>Team Management</li>
-        <li>Communication and Leadership</li>
-        <li>Strategic Planning</li>
-      </ul>
+      <h2 id="background">My Skills</h2>
+      <div class="skills-list">
+        <ul class="skills-list2">
+          <li><em>Language:</em> <span class="skills">HTML5, CSS3, JavaScript</span></li>
+          <li><em>Application/Framework:</em> <span class="skills"> Node, Express </span></li>
+          <li><em>Libraries/API:</em> <span class="skills"> React, Bootstrap</span></li>
+          <li><em>Database:</em> <span class="skills"> MySQL, MongoDB</span></li>
+          <li><em>Version Control:</em> <span class="skills"> Git, Github</span></li>
+          <li><em>Other Tools:</em> <span class="skills"> Mocha, Docker, ESLint</span></li>
+          <li><em>Operating Systems:</em> <span class="skills"> Linux, MacOS, Windows </span></li>
+        </ul>
+        <ul class="skills-list2">
+          <li>Communication</li>
+          <li>Project Management</li> 
+          <li>Stakeholder Management</li>
+          <li>Decision Making</li>
+          <li>Adaptability</li>
+          <li>Collaboration</li>
+        </ul>
+      </div>
+    </div>
+    <div class="maintext">
+      <h2 id="work-experience">Work Experience</h2>
+      <p>Most recently I have been working in leadership positions for an E-Commerce retailer.  Prior to that I started in Finance on the Arcadia graduate scheme, before moving into Operations and Project Management, and finally the commercial side of the business. </p>
+      <table class="table-style">
+        <tr>
+          <td class="work-exp-col1">
+            <ul class="work-exp-table">
+              <li class="work-exp-title">Re-Training – Career Change</li>
+              <li class="work-exp-date">2020 - present</li>
+            </ul>
+          </td>
+          <td class="work-exp-col2">
+            <ul class="work-exp-table">
+              <li>Learning software development skills, primarily JavaScript and the MERN stack, but ensuring that the main focus is on the fundamental concepts</li>
+              <li>FreeCodeCamp: Responsive Web Design, Javascript Algorithms & Data Structures, APIs and Microservices</li>
+              <li>Codecademy: Web Development Career Path</li>
+              <li>Mentors: I sought out three mentors in the industry as I realise the importance of feedback to develop as quickly as possible.  They give me feedback on coding, work on projects with me, and generally help guide my development.  </li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td class="work-exp-col1">
+            <ul class="work-exp-table">
+              <li class="work-exp-title">Sabbatical</li>
+              <li class="work-exp-date">2019 - 2020</li>
+            </ul>
+          </td>
+          <td class="work-exp-col2">
+            <ul class="work-exp-table">
+              <li>Took 8 months out to travel to Asia and South America</li>
+              <li>Obtained advanced certificate in scuba diving, learnt Spanish, hiked a lot!</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td class="work-exp-col1">
+            <ul class="work-exp-table">
+              <li class="work-exp-title">Director of EU E-Commerce</li>
+              <li class="">Wolverine Worldwide</li>
+              <li class="work-exp-date">2016 – 2019</li>
+            </ul>
+          </td>  
+          <td class="work-exp-col2">
+            <ul class="work-exp-table">
+              <li>Adaptable and credible business leader bought in to lead E-Commerce team (15 heads) responsible for 4 branded sites, shipping 150k units across Europe.  </li>
+              <li>Moved into the commercial side of the business from finance after being highlighted as a rising star within the organisation.</li>
+              <li>Responsible for delivering a rich digital experience, creating and implementing on site content, improving user experience and rolling out new technologies. </li>
+              <li>Project managed multiple site rollouts, hitting tight business deadlines while ensuring existing site performance was not impacted.  </li>
+              <li>Excellent communication and stakeholder management required to ensure that all areas of the business were aligned with and bought into the direction of the central E-Commerce function.  </li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td class="work-exp-col1">
+            <ul class="work-exp-table">
+              <li class="work-exp-title">Director of EU E-Commerce</li>
+              <li class="">Wolverine Worldwide</li>
+              <li class="work-exp-date">2016 – 2019</li>
+            </ul>
+          </td>  
+          <td class="work-exp-col2">
+            <ul class="work-exp-table">
+              <li>Adaptable and credible business leader bought in to lead E-Commerce team (15 heads) responsible for 4 branded sites, shipping 150k units across Europe.  </li>
+              <li>Moved into the commercial side of the business from finance after being highlighted as a rising star within the organisation.</li>
+              <li>Responsible for delivering a rich digital experience, creating and implementing on site content, improving user experience and rolling out new technologies. </li>
+              <li>Project managed multiple site rollouts, hitting tight business deadlines while ensuring existing site performance was not impacted.  </li>
+              <li>Excellent communication and stakeholder management required to ensure that all areas of the business were aligned with and bought into the direction of the central E-Commerce function.  </li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    
+      </div>
+
+    <div class="maintext">
+
+      <div class="work-exp-table">
+
+      </div>
+
     </div>
     <div class="maintext">
       <h2 id="travelling">Travelling</h2>
