Added scroll button.

--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@
 
   </section>
 
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
+
   <footer class="footer-container">
     <div class="contact-details">
       <a href="https://github.com/jwpf100" target="_blank"><img src="./images/logos/GitHub-Mark-64px.png"></a>
