Fixed some links.

--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
                 <em>Webpack</em> config. Uses <em>SASS</em> for <em>CSS</em> pre-processing.
               </li>
               <li>Integrated Mailchimp and Calendly into the app for email and scheduling.</li>
-              <li><a href="https://essentialcoaching.co.uk/" target="_blank">essentialcoaching.co.uk</a></li>
+              <li><a href="https://www.essentialcoaching.co.uk/" target="_blank">essentialcoaching.co.uk</a></li>
               <li><a href="https://github.com/jwpf100/essential-coaching-app" target="_blank">Github Repository</a></li>
             </ul>
           </div>
-          <a href="https://essentialcoaching.co.uk/" target="_blank">
+          <a href="https://www.essentialcoaching.co.uk/" target="_blank">
             <img class="essential-image" src="./images/essential-coaching.jpg" alt="">
           </a>
         </div>
@@ -311,8 +311,9 @@
               <li>Hosted on <em>AWS EC2</em> instance, using <em>NginX</em> as a reverse proxy for the Node-app and to
                 serve the static react front end</li>
               <li><a href="https://josephfletcher.co.uk/blog/" target="_blank">josephfletcher.co.uk/blog</a></li>
-              <li><a href="github.com/jwpf100/node-blog-frontend" target="_blank">Front End Github Repository</a></li>
-              <li><a href="github.com/jwpf100/node-blog" target="_blank">Back End Github Repository</a></li>
+              <li><a href="https://github.com/jwpf100/node-blog-frontend" target="_blank">Front End Github
+                  Repository</a></li>
+              <li><a href="https://github.com/jwpf100/node-blog" target="_blank">Back End Github Repository</a></li>
             </ul>
           </div>
           <a href="https://josephfletcher.co.uk/blog/" target="_blank"><img class="essential-image"
@@ -334,10 +335,10 @@
               <li><a href="https://github.com/jwpf100/blackjack" target="_blank">Github Repository</a></li>
             </ul>
           </div>
-          <a href="https://josephfletcher.co.uk/blackjack" target="_blank">
+          <a href="https://josephfletcher.co.uk/blackjack/" target="_blank">
             <img class="essential-image" src="./images/blackjack.jpg" width="200px" alt="">
           </a>
-          <a href="https://josephfletcher.co.uk/blackjack" target="_blank">
+          <a href="https://josephfletcher.co.uk/blackjack/" target="_blank">
             <img class="essential-image" src="./images/blackjack2.jpg" width="200px" alt="">
           </a>
         </div>
@@ -353,7 +354,7 @@
               <li>Single page portfolio to showcase some of my projects, and provide some background on me. Created in
                 vanilla <em>HTML</em>, <em>CSS</em> and <em>JS</em>.</li>
               <li><a href="https://josephfletcher.co.uk/" target="_blank">josephfletcher.co.uk</a></li>
-              <li><a href="github.com/jwpf100/ga-portfolio" target="_blank">Github Repository</a></li>
+              <li><a href="https://github.com/jwpf100/ga-portfolio" target="_blank">Github Repository</a></li>
             </ul>
           </div>
           <a href="https://josephfletcher.co.uk/" target="_blank"><img class="essential-image"
